--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "prestart": "npm run rebuild",
     "start": "node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
-    "rebuild": "npm run clean && npm run build",
-    "postinstall": "npm run build",
-    "start:prod": "node dist/index.js"
+    "rebuild": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
